--- a/ai_suggestions.html
+++ b/ai_suggestions.html
@@ -10,7 +10,7 @@
     <nav class="bg-white shadow-md">
         <div class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
-                <img src="https://via.placeholder.com/40" alt="Logo" class="mr-3">
+                <img src="https://via.placeholder.com/40" alt="Logo" class="mr-3 rounded-full">
                 <span class="font-bold text-xl">Message Hub</span>
             </div>
             <div class="flex items-center">
@@ -38,22 +38,4 @@
             <h2 class="text-2xl font-bold mb-6">AI Suggestions</h2>
             <ul class="divide-y divide-gray-200">
                 <li class="py-4">
-                    <p class="text-gray-700">Hi John, I'm doing well. How about you?</p>
-                    <div class="mt-2">
-                        <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Send</button>
-                        <button class="ml-2 bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Edit</button>
-                    </div>
-                </li>
-                <li class="py-4">
-                    <p class="text-gray-700">Hey John, I'll see you later.</p>
-                    <div class="mt-2">
-                        <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Send</button>
-                        <button class="ml-2 bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Edit</button>
-                    </div>
-                </li>
-                <!-- Add more suggestions as needed -->
-            </ul>
-        </div>
-    </div>
-</body>
-</html>
+                    <p class="text-gray-700">Hi John, I'm doing
