--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
     <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md">
-        <h2 class="text-2xl font-bold mb-6">Sign Up</h2>
+        <h2 class="text-2xl font-bold mb-6 text-center">Sign Up</h2>
         <form>
             <div class="mb-4">
                 <label for="email" class="block text-gray-700 font-bold mb-2">Email</label>
@@ -22,13 +22,13 @@
                 <label for="confirm-password" class="block text-gray-700 font-bold mb-2">Confirm Password</label>
                 <input type="password" id="confirm-password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Confirm Password">
             </div>
-            <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Sign Up</button>
+            <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full">Sign Up</button>
         </form>
         <p class="mt-4 text-center">Already have an account? <a href="#login" class="text-blue-500 hover:text-blue-700">Login</a></p>
     </div>
 
     <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md hidden" id="login-form">
-        <h2 class="text-2xl font-bold mb-6">Login</h2>
+        <h2 class="text-2xl font-bold mb-6 text-center">Login</h2>
         <form>
             <div class="mb-4">
                 <label for="login-email" class="block text-gray-700 font-bold mb-2">Email</label>
@@ -38,7 +38,7 @@
                 <label for="login-password" class="block text-gray-700 font-bold mb-2">Password</label>
                 <input type="password" id="login-password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Password">
             </div>
-            <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Login</button>
+            <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full">Login</button>
         </form>
         <p class="mt-4 text-center">Don't have an account? <a href="#signup" class="text-blue-500 hover:text-blue-700">Sign Up</a></p>
     </div>
