--- a/message_detail.html
+++ b/message_detail.html
@@ -10,7 +10,7 @@
     <nav class="bg-white shadow-md">
         <div class="container mx-auto px-6 py-3 flex justify-between items-center">
             <div class="flex items-center">
-                <img src="https://via.placeholder.com/40" alt="Logo" class="mr-3">
+                <img src="https://via.placeholder.com/40" alt="Logo" class="mr-3 rounded-full">
                 <span class="font-bold text-xl">Message Hub</span>
             </div>
             <div class="flex items-center">
