--- a/ai_suggestions.html
+++ b/ai_suggestions.html
@@ -15,7 +15,8 @@
             </div>
             <div class="flex items-center">
                 <input type="text" placeholder="Search..." class="px-4 py-2 rounded-full border mr-3">
-                <img src="https://via.placeholder.com/40" alt="Profile" class="rounded-full">
+                <a href="dashboard.html" class="text-blue-500 hover:text-blue-700">Back to Inbox</a>
+                <a href="index.html" class="ml-4 text-blue-500 hover:text-blue-700">Logout</a>
             </div>
         </div>
     </nav>
@@ -38,4 +39,22 @@
             <h2 class="text-2xl font-bold mb-6">AI Suggestions</h2>
             <ul class="divide-y divide-gray-200">
                 <li class="py-4">
-                    <p class="text-gray-700">Hi John, I'm doing
+                    <p class="text-gray-700">Hi John, I'm doing well. How about you?</p>
+                    <div class="mt-2">
+                        <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Send</button>
+                        <button class="ml-2 bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Edit</button>
+                    </div>
+                </li>
+                <li class="py-4">
+                    <p class="text-gray-700">Hey John, I'll see you later.</p>
+                    <div class="mt-2">
+                        <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Send</button>
+                        <button class="ml-2 bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Edit</button>
+                    </div>
+                </li>
+                <!-- Add more suggestions as needed -->
+            </ul>
+        </div>
+    </div>
+</body>
+</html>
