--- a/dashboard.html
+++ b/dashboard.html
@@ -15,7 +15,7 @@
             </div>
             <div class="flex items-center">
                 <input type="text" placeholder="Search..." class="px-4 py-2 rounded-full border mr-3">
-                <img src="https://via.placeholder.com/40" alt="Profile" class="rounded-full">
+                <a href="index.html" class="text-blue-500 hover:text-blue-700">Logout</a>
             </div>
         </div>
     </nav>
