--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full">Sign Up</button>
         </form>
-        <p class="mt-4 text-center">Already have an account? <a href="#login" class="text-blue-500 hover:text-blue-700">Login</a></p>
+        <p class="mt-4 text-center">Already have an account? <a href="index.html#login" class="text-blue-500 hover:text-blue-700">Login</a></p>
     </div>
 
     <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md hidden" id="login-form">
@@ -40,7 +40,7 @@
             </div>
             <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full">Login</button>
         </form>
-        <p class="mt-4 text-center">Don't have an account? <a href="#signup" class="text-blue-500 hover:text-blue-700">Sign Up</a></p>
+        <p class="mt-4 text-center">Don't have an account? <a href="index.html#signup" class="text-blue-500 hover:text-blue-700">Sign Up</a></p>
     </div>
 
     <script>
