--- a/message_detail.html
+++ b/message_detail.html
@@ -15,7 +15,8 @@
             </div>
             <div class="flex items-center">
                 <input type="text" placeholder="Search..." class="px-4 py-2 rounded-full border mr-3">
-                <img src="https://via.placeholder.com/40" alt="Profile" class="rounded-full">
+                <a href="dashboard.html" class="text-blue-500 hover:text-blue-700">Back to Inbox</a>
+                <a href="index.html" class="ml-4 text-blue-500 hover:text-blue-700">Logout</a>
             </div>
         </div>
     </nav>
