--- a/index.html
+++ b/index.html
@@ -3,58 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign-Up/Login</title>
+    <title>Message Hub</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
-    <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md">
-        <h2 class="text-2xl font-bold mb-6 text-center">Sign Up</h2>
-        <form>
-            <div class="mb-4">
-                <label for="email" class="block text-gray-700 font-bold mb-2">Email</label>
-                <input type="email" id="email" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Email">
-            </div>
-            <div class="mb-4">
-                <label for="password" class="block text-gray-700 font-bold mb-2">Password</label>
-                <input type="password" id="password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Password">
-            </div>
-            <div class="mb-6">
-                <label for="confirm-password" class="block text-gray-700 font-bold mb-2">Confirm Password</label>
-                <input type="password" id="confirm-password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Confirm Password">
-            </div>
-            <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full">Sign Up</button>
-        </form>
-        <p class="mt-4 text-center">Already have an account? <a href="index.html#login" class="text-blue-500 hover:text-blue-700">Login</a></p>
+    <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md text-center">
+        <h1 class="text-3xl font-bold mb-6">Welcome to Message Hub</h1>
+        <p class="text-gray-600 mb-8">Manage all your messages in one place.</p>
+        <a href="signup.html" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mr-2">Sign Up</a>
+        <a href="login.html" class="bg-gray-300 hover:bg-gray-400 text-gray-700 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Login</a>
     </div>
-
-    <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md hidden" id="login-form">
-        <h2 class="text-2xl font-bold mb-6 text-center">Login</h2>
-        <form>
-            <div class="mb-4">
-                <label for="login-email" class="block text-gray-700 font-bold mb-2">Email</label>
-                <input type="email" id="login-email" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Email">
-            </div>
-            <div class="mb-6">
-                <label for="login-password" class="block text-gray-700 font-bold mb-2">Password</label>
-                <input type="password" id="login-password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Password">
-            </div>
-            <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full">Login</button>
-        </form>
-        <p class="mt-4 text-center">Don't have an account? <a href="index.html#signup" class="text-blue-500 hover:text-blue-700">Sign Up</a></p>
-    </div>
-
-    <script>
-        document.querySelector('a[href="#login"]').addEventListener('click', function(e) {
-            e.preventDefault();
-            document.querySelector('.hidden').classList.remove('hidden');
-            document.querySelector('.bg-white.p-8.rounded-lg.shadow-md.w-full.max-w-md:not(.hidden)').classList.add('hidden');
-        });
-
-        document.querySelector('a[href="#signup"]').addEventListener('click', function(e) {
-            e.preventDefault();
-            document.querySelector('.hidden').classList.remove('hidden');
-            document.querySelector('.bg-white.p-8.rounded-lg.shadow-md.w-full.max-w-md:not(.hidden)').classList.add('hidden');
-        });
-    </script>
 </body>
 </html>
