--- a/ai_suggestions.html
+++ b/ai_suggestions.html
@@ -14,9 +14,8 @@
                 <span class="font-bold text-xl">Message Hub</span>
             </div>
             <div class="flex items-center">
-                <input type="text" placeholder="Search..." class="px-4 py-2 rounded-full border mr-3">
-                <a href="dashboard.html" class="text-blue-500 hover:text-blue-700">Back to Inbox</a>
-                <a href="index.html" class="ml-4 text-blue-500 hover:text-blue-700">Logout</a>
+                <a href="signup.html" class="text-blue-500 hover:text-blue-700 mr-4">Sign Up</a>
+                <a href="login.html" class="text-blue-500 hover:text-blue-700">Login</a>
             </div>
         </div>
     </nav>
