--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
                 <label for="password" class="block text-gray-700 font-bold mb-2">Password</label>
                 <input type="password" id="password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Password">
             </div>
-            <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full">Login</button>
+            <button type="button" onclick="window.location.href='index.html'" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full">Login</button>
         </form>
         <p class="mt-4 text-center">Don't have an account? <a href="signup.html" class="text-blue-500 hover:text-blue-700">Sign Up</a></p>
     </div>
