--- a/signup.html
+++ b/signup.html
@@ -22,7 +22,7 @@
                 <label for="confirm-password" class="block text-gray-700 font-bold mb-2">Confirm Password</label>
                 <input type="password" id="confirm-password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Confirm Password">
             </div>
-            <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full">Sign Up</button>
+            <button type="button" onclick="window.location.href='index.html'" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full">Sign Up</button>
         </form>
         <p class="mt-4 text-center">Already have an account? <a href="login.html" class="text-blue-500 hover:text-blue-700">Login</a></p>
     </div>
