--- a/dashboard.html
+++ b/dashboard.html
@@ -14,25 +14,20 @@
                 <span class="font-bold text-xl">Message Hub</span>
             </div>
             <div class="flex items-center">
-                <input type="text" placeholder="Search..." class="px-4 py-2 rounded-full border mr-3">
-                <a href="index.html" class="text-blue-500 hover:text-blue-700">Logout</a>
+                <a href="index.html" class="text-blue-500 hover:text-blue-700">Home</a>
             </div>
         </div>
     </nav>
 
-    <div class="container mx-auto px-6 py-6 flex">
-        <aside class="w-1/4 pr-6">
-            <ul class="space-y-2">
-                <li><a href="#" class="block bg-blue-500 text-white py-2 px-4 rounded">WhatsApp</a></li>
-                <li><a href="#" class="block py-2 px-4 rounded hover:bg-gray-200">Instagram</a></li>
-                <li><a href="#" class="block py-2 px-4 rounded hover:bg-gray-200">Gmail</a></li>
-                <li><a href="#" class="block py-2 px-4 rounded hover:bg-gray-200">Outlook</a></li>
-            </ul>
-        </aside>
-
-        <main class="w-3/4">
-            <div class="bg-white p-6 rounded-lg shadow-md">
-                <h2 class="text-2xl font-bold mb-6">Inbox</h2>
+    <div class="container mx-auto px-6 py-6">
+        <div class="bg-white p-6 rounded-lg shadow-md">
+            <div class="flex border-b border-gray-200">
+                <a href="#gmail" class="inline-block p-4 text-blue-500 hover:text-blue-700 border-b-2 border-blue-500 font-semibold" onclick="showTab('gmail')">Gmail</a>
+                <a href="#whatsapp" class="inline-block p-4 text-gray-600 hover:text-blue-700 border-b-2 border-transparent font-semibold" onclick="showTab('whatsapp')">WhatsApp</a>
+                <a href="#instagram" class="inline-block p-4 text-gray-600 hover:text-blue-700 border-b-2 border-transparent font-semibold" onclick="showTab('instagram')">Instagram</a>
+                <a href="#facebook" class="inline-block p-4 text-gray-600 hover:text-blue-700 border-b-2 border-transparent font-semibold" onclick="showTab('facebook')">Facebook</a>
+            </div>
+            <div id="gmail" class="p-4">
                 <ul class="divide-y divide-gray-200">
                     <li class="py-4">
                         <a href="message_detail.html" class="flex items-center hover:bg-gray-100 p-2 rounded">
@@ -57,7 +52,69 @@
                     <!-- Add more messages as needed -->
                 </ul>
             </div>
-        </main>
+            <div id="whatsapp" class="p-4 hidden">
+                <ul class="divide-y divide-gray-200">
+                    <li class="py-4">
+                        <a href="message_detail.html" class="flex items-center hover:bg-gray-100 p-2 rounded">
+                            <img src="https://via.placeholder.com/40" alt="Sender" class="mr-4 rounded-full">
+                            <div>
+                                <p class="font-bold">Alice Johnson</p>
+                                <p class="text-gray-700">Hey, what's up?</p>
+                            </div>
+                            <span class="ml-auto text-gray-500">11:00 AM</span>
+                        </a>
+                    </li>
+                    <!-- Add more messages as needed -->
+                </ul>
+            </div>
+            <div id="instagram" class="p-4 hidden">
+                <ul class="divide-y divide-gray-200">
+                    <li class="py-4">
+                        <a href="message_detail.html" class="flex items-center hover:bg-gray-100 p-2 rounded">
+                            <img src="https://via.placeholder.com/40" alt="Sender" class="mr-4 rounded-full">
+                            <div>
+                                <p class="font-bold">Bob Brown</p>
+                                <p class="text-gray-700">Check out this photo!</p>
+                            </div>
+                            <span class="ml-auto text-gray-500">12:00 PM</span>
+                        </a>
+                    </li>
+                    <!-- Add more messages as needed -->
+                </ul>
+            </div>
+            <div id="facebook" class="p-4 hidden">
+                <ul class="divide-y divide-gray-200">
+                    <li class="py-4">
+                        <a href="message_detail.html" class="flex items-center hover:bg-gray-100 p-2 rounded">
+                            <img src="https://via.placeholder.com/40" alt="Sender" class="mr-4 rounded-full">
+                            <div>
+                                <p class="font-bold">Charlie Davis</p>
+                                <p class="text-gray-700">Happy Birthday!</p>
+                            </div>
+                            <span class="ml-auto text-gray-500">1:00 PM</span>
+                        </a>
+                    </li>
+                    <!-- Add more messages as needed -->
+                </ul>
+            </div>
+        </div>
     </div>
+
+    <script>
+        function showTab(tabId) {
+            const tabs = document.querySelectorAll('[id^="tab-"]');
+            const contents = document.querySelectorAll('[id^=""]');
+            tabs.forEach(tab => tab.classList.remove('border-blue-500', 'text-blue-500'));
+            contents.forEach(content => content.classList.add('hidden'));
+
+            document.querySelector(`#${tabId}`).classList.add('border-blue-500', 'text-blue-500');
+            document.querySelector(`#${tabId}`).classList.remove('hidden');
+        }
+
+        // Initialize with Gmail tab open
+        document.addEventListener('DOMContentLoaded', () => {
+            showTab('gmail');
+        });
+    </script>
 </body>
 </html>
