--- a/message_detail.html
+++ b/message_detail.html
@@ -14,8 +14,8 @@
                 <span class="font-bold text-xl">Message Hub</span>
             </div>
             <div class="flex items-center">
-                <a href="signup.html" class="text-blue-500 hover:text-blue-700 mr-4">Sign Up</a>
-                <a href="login.html" class="text-blue-500 hover:text-blue-700">Login</a>
+                <a href="dashboard.html" class="text-blue-500 hover:text-blue-700">Back to Dashboard</a>
+                <a href="index.html" class="ml-4 text-blue-500 hover:text-blue-700">Home</a>
             </div>
         </div>
     </nav>
