--- a/message_detail.html
+++ b/message_detail.html
@@ -6,9 +6,10 @@
     <title>Message Detail</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100">
-    <nav class="bg-white shadow-md">
-        <div class="container mx-auto px-6 py-3 flex justify-between items-center">
+<body class="bg-gray-100 font-sans">
+    <!-- Sticky Header -->
+    <nav class="sticky top-0 bg-white shadow-md z-10">
+        <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center">
                 <img src="https://via.placeholder.com/40" alt="Logo" class="mr-3 rounded-full">
                 <span class="font-bold text-xl">Message Hub</span>
@@ -20,6 +21,7 @@
         </div>
     </nav>
 
+    <!-- Message Detail -->
     <div class="container mx-auto px-6 py-6">
         <div class="bg-white p-6 rounded-lg shadow-md">
             <h2 class="text-2xl font-bold mb-6">Message from John Doe</h2>
@@ -28,30 +30,30 @@
                 <span class="block mt-2 text-gray-500">10:30 AM</span>
             </div>
             <div class="mb-4">
-                <textarea placeholder="Type a reply..." class="w-full px-4 py-2 rounded-lg border"></textarea>
+                <textarea placeholder="Type a reply..." class="w-full px-4 py-2 rounded-lg border focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
             </div>
-            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Send</button>
-            <button class="ml-2 bg-gray-300 hover:bg-gray-400 text-gray-700 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Cancel</button>
+            <button class="bg-blue-500 hover:bg-blue-700 transition duration-300 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Send</button>
+            <button class="ml-2 bg-gray-300 hover:bg-gray-400 transition duration-300 text-gray-700 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Cancel</button>
         </div>
 
+        <!-- AI Suggestions -->
         <div class="bg-white p-6 rounded-lg shadow-md mt-6">
             <h2 class="text-2xl font-bold mb-6">AI Suggestions</h2>
             <ul class="divide-y divide-gray-200">
                 <li class="py-4">
                     <p class="text-gray-700">Hi John, I'm doing well. How about you?</p>
                     <div class="mt-2">
-                        <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Send</button>
-                        <button class="ml-2 bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Edit</button>
+                        <button class="bg-green-500 hover:bg-green-700 transition duration-300 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Send</button>
+                        <button class="ml-2 bg-red-500 hover:bg-red-700 transition duration-300 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Edit</button>
                     </div>
                 </li>
                 <li class="py-4">
                     <p class="text-gray-700">Hey John, I'll see you later.</p>
                     <div class="mt-2">
-                        <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Send</button>
-                        <button class="ml-2 bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Edit</button>
+                        <button class="bg-green-500 hover:bg-green-700 transition duration-300 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Send</button>
+                        <button class="ml-2 bg-red-500 hover:bg-red-700 transition duration-300 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Edit</button>
                     </div>
                 </li>
-                <!-- Add more suggestions as needed -->
             </ul>
         </div>
     </div>
