--- a/dashboard.html
+++ b/dashboard.html
@@ -5,18 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        /* Sidebar Hover Animation */
+        @keyframes slideIn {
+            from { transform: translateX(-20px); opacity: 0; }
+            to { transform: translateX(0); opacity: 1; }
+        }
+        .slide-in {
+            animation: slideIn 0.5s ease-in-out;
+        }
+    </style>
 </head>
-<body class="bg-gray-100 font-sans">
+<body class="bg-gray-50 font-sans">
     <!-- Navbar -->
-    <nav class="bg-white shadow-md">
+    <nav class="bg-blue-800 shadow-md">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center">
-                <img src="https://via.placeholder.com/40" alt="Logo" class="mr-3 rounded-full">
-                <span class="font-bold text-xl">Message Hub</span>
+                <img src="logo.png" alt="Logo" class="mr-3 w-10 h-10 rounded-full">
+                <span class="font-bold text-xl text-white">Message Hub</span>
             </div>
             <div class="flex items-center">
                 <input type="text" placeholder="Search messages..." class="px-4 py-2 rounded-full border mr-3 focus:outline-none focus:ring-2 focus:ring-blue-500">
-                <a href="index.html" class="text-blue-500 hover:text-blue-700">Home</a>
+                <a href="index.html" class="text-white hover:text-blue-300 transition duration-300">Home</a>
             </div>
         </div>
     </nav>
@@ -25,35 +35,35 @@
     <div class="container mx-auto px-6 py-6 flex">
         <!-- Sidebar -->
         <aside class="w-1/4 pr-6">
-            <ul class="space-y-2">
-                <li><a href="#gmail" class="flex items-center py-2 px-4 rounded hover:bg-gray-200 transition duration-300" onclick="showTab('gmail')"><img src="https://via.placeholder.com/20" alt="Gmail" class="mr-2"> Gmail</a></li>
-                <li><a href="#whatsapp" class="flex items-center py-2 px-4 rounded hover:bg-gray-200 transition duration-300" onclick="showTab('whatsapp')"><img src="https://via.placeholder.com/20" alt="WhatsApp" class="mr-2"> WhatsApp</a></li>
-                <li><a href="#instagram" class="flex items-center py-2 px-4 rounded hover:bg-gray-200 transition duration-300" onclick="showTab('instagram')"><img src="https://via.placeholder.com/20" alt="Instagram" class="mr-2"> Instagram</a></li>
-                <li><a href="#facebook" class="flex items-center py-2 px-4 rounded hover:bg-gray-200 transition duration-300" onclick="showTab('facebook')"><img src="https://via.placeholder.com/20" alt="Facebook" class="mr-2"> Facebook</a></li>
+            <ul class="space-y-2 slide-in">
+                <li><a href="#gmail" class="flex items-center py-3 px-4 rounded hover:bg-blue-100 transition duration-300" onclick="showTab('gmail')"><img src="gmail-icon.png" alt="Gmail" class="mr-2 w-6 h-6"> Gmail</a></li>
+                <li><a href="#whatsapp" class="flex items-center py-3 px-4 rounded hover:bg-blue-100 transition duration-300" onclick="showTab('whatsapp')"><img src="whatsapp-icon.png" alt="WhatsApp" class="mr-2 w-6 h-6"> WhatsApp</a></li>
+                <li><a href="#instagram" class="flex items-center py-3 px-4 rounded hover:bg-blue-100 transition duration-300" onclick="showTab('instagram')"><img src="instagram-icon.png" alt="Instagram" class="mr-2 w-6 h-6"> Instagram</a></li>
+                <li><a href="#facebook" class="flex items-center py-3 px-4 rounded hover:bg-blue-100 transition duration-300" onclick="showTab('facebook')"><img src="facebook-icon.png" alt="Facebook" class="mr-2 w-6 h-6"> Facebook</a></li>
             </ul>
         </aside>
 
         <!-- Main Content -->
         <main class="w-3/4">
             <div id="gmail" class="p-4">
-                <h2 class="text-2xl font-bold mb-4">Gmail Messages</h2>
+                <h2 class="text-2xl font-bold mb-4 text-blue-800">Gmail Messages</h2>
                 <ul class="divide-y divide-gray-200">
                     <li class="py-4">
-                        <a href="message_detail.html" class="flex items-center hover:bg-gray-100 p-4 rounded-lg transition duration-300">
-                            <img src="https://via.placeholder.com/40" alt="Sender" class="mr-4 rounded-full">
+                        <a href="message_detail.html" class="flex items-center hover:bg-blue-100 p-4 rounded-lg transition duration-300">
+                            <img src="user-avatar.png" alt="Sender" class="mr-4 w-10 h-10 rounded-full">
                             <div>
-                                <p class="font-bold">John Doe</p>
-                                <p class="text-gray-700">Hello, how are you?</p>
+                                <p class="font-bold text-blue-800">John Doe</p>
+                                <p class="text-gray-600">Hello, how are you?</p>
                             </div>
                             <span class="ml-auto text-gray-500">10:30 AM</span>
                         </a>
                     </li>
                     <li class="py-4">
-                        <a href="message_detail.html" class="flex items-center hover:bg-gray-100 p-4 rounded-lg transition duration-300">
-                            <img src="https://via.placeholder.com/40" alt="Sender" class="mr-4 rounded-full">
+                        <a href="message_detail.html" class="flex items-center hover:bg-blue-100 p-4 rounded-lg transition duration-300">
+                            <img src="user-avatar.png" alt="Sender" class="mr-4 w-10 h-10 rounded-full">
                             <div>
-                                <p class="font-bold">Jane Smith</p>
-                                <p class="text-gray-700">Meeting at 3 PM</p>
+                                <p class="font-bold text-blue-800">Jane Smith</p>
+                                <p class="text-gray-600">Meeting at 3 PM</p>
                             </div>
                             <span class="ml-auto text-gray-500">9:45 AM</span>
                         </a>
@@ -61,14 +71,14 @@
                 </ul>
             </div>
             <div id="whatsapp" class="p-4 hidden">
-                <h2 class="text-2xl font-bold mb-4">WhatsApp Messages</h2>
+                <h2 class="text-2xl font-bold mb-4 text-blue-800">WhatsApp Messages</h2>
                 <ul class="divide-y divide-gray-200">
                     <li class="py-4">
-                        <a href="message_detail.html" class="flex items-center hover:bg-gray-100 p-4 rounded-lg transition duration-300">
-                            <img src="https://via.placeholder.com/40" alt="Sender" class="mr-4 rounded-full">
+                        <a href="message_detail.html" class="flex items-center hover:bg-blue-100 p-4 rounded-lg transition duration-300">
+                            <img src="user-avatar.png" alt="Sender" class="mr-4 w-10 h-10 rounded-full">
                             <div>
-                                <p class="font-bold">Alice Johnson</p>
-                                <p class="text-gray-700">Hey, what's up?</p>
+                                <p class="font-bold text-blue-800">Alice Johnson</p>
+                                <p class="text-gray-600">Hey, what's up?</p>
                             </div>
                             <span class="ml-auto text-gray-500">11:00 AM</span>
                         </a>
@@ -76,14 +86,14 @@
                 </ul>
             </div>
             <div id="instagram" class="p-4 hidden">
-                <h2 class="text-2xl font-bold mb-4">Instagram Messages</h2>
+                <h2 class="text-2xl font-bold mb-4 text-blue-800">Instagram Messages</h2>
                 <ul class="divide-y divide-gray-200">
                     <li class="py-4">
-                        <a href="message_detail.html" class="flex items-center hover:bg-gray-100 p-4 rounded-lg transition duration-300">
-                            <img src="https://via.placeholder.com/40" alt="Sender" class="mr-4 rounded-full">
+                        <a href="message_detail.html" class="flex items-center hover:bg-blue-100 p-4 rounded-lg transition duration-300">
+                            <img src="user-avatar.png" alt="Sender" class="mr-4 w-10 h-10 rounded-full">
                             <div>
-                                <p class="font-bold">Bob Brown</p>
-                                <p class="text-gray-700">Check out this photo!</p>
+                                <p class="font-bold text-blue-800">Bob Brown</p>
+                                <p class="text-gray-600">Check out this photo!</p>
                             </div>
                             <span class="ml-auto text-gray-500">12:00 PM</span>
                         </a>
@@ -91,14 +101,14 @@
                 </ul>
             </div>
             <div id="facebook" class="p-4 hidden">
-                <h2 class="text-2xl font-bold mb-4">Facebook Messages</h2>
+                <h2 class="text-2xl font-bold mb-4 text-blue-800">Facebook Messages</h2>
                 <ul class="divide-y divide-gray-200">
                     <li class="py-4">
-                        <a href="message_detail.html" class="flex items-center hover:bg-gray-100 p-4 rounded-lg transition duration-300">
-                            <img src="https://via.placeholder.com/40" alt="Sender" class="mr-4 rounded-full">
+                        <a href="message_detail.html" class="flex items-center hover:bg-blue-100 p-4 rounded-lg transition duration-300">
+                            <img src="user-avatar.png" alt="Sender" class="mr-4 w-10 h-10 rounded-full">
                             <div>
-                                <p class="font-bold">Charlie Davis</p>
-                                <p class="text-gray-700">Happy Birthday!</p>
+                                <p class="font-bold text-blue-800">Charlie Davis</p>
+                                <p class="text-gray-600">Happy Birthday!</p>
                             </div>
                             <span class="ml-auto text-gray-500">1:00 PM</span>
                         </a>
