--- a/index.html
+++ b/index.html
@@ -5,35 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Message Hub</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        /* Custom Animations */
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        .fade-in {
+            animation: fadeIn 1s ease-in-out;
+        }
+    </style>
 </head>
-<body class="bg-gray-100 font-sans">
+<body class="bg-gray-50 font-sans">
     <!-- Hero Section -->
-    <section class="relative bg-cover bg-center h-screen" style="background-image: url('https://via.placeholder.com/1920x1080');">
-        <div class="absolute inset-0 bg-black opacity-50"></div>
+    <section class="relative bg-cover bg-center h-screen" style="background-image: url('hero-bg.jpg');">
+        <div class="absolute inset-0 bg-blue-900 opacity-70"></div>
         <div class="container mx-auto px-6 py-32 relative z-10 text-center text-white">
-            <h1 class="text-5xl font-bold mb-4">Welcome to Message Hub</h1>
-            <p class="text-xl mb-8">Manage all your messages in one place from Gmail, WhatsApp, Instagram, and Facebook.</p>
-            <a href="dashboard.html" class="bg-blue-500 hover:bg-blue-700 transition duration-300 text-white font-bold py-3 px-6 rounded-full shadow-lg hover:shadow-xl">Go to Dashboard</a>
+            <h1 class="text-5xl font-bold mb-4 fade-in">Welcome to Message Hub</h1>
+            <p class="text-xl mb-8 fade-in">Manage all your messages in one place from Gmail, WhatsApp, Instagram, and Facebook.</p>
+            <a href="dashboard.html" class="bg-blue-500 hover:bg-blue-600 transition duration-300 text-white font-bold py-3 px-6 rounded-full shadow-lg hover:shadow-xl fade-in">Go to Dashboard</a>
         </div>
     </section>
 
     <!-- Features Section -->
-    <section class="container mx-auto px-6 py-12">
-        <h2 class="text-3xl font-bold text-center mb-8">Why Choose Message Hub?</h2>
+    <section class="container mx-auto px-6 py-12 bg-white">
+        <h2 class="text-3xl font-bold text-center mb-8 text-blue-800">Why Choose Message Hub?</h2>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-            <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                <img src="https://via.placeholder.com/100" alt="Unified Inbox" class="mx-auto mb-4">
-                <h3 class="text-xl font-bold mb-2">Unified Inbox</h3>
+            <div class="bg-blue-100 p-6 rounded-lg shadow-md text-center fade-in">
+                <img src="inbox-icon.png" alt="Unified Inbox" class="mx-auto mb-4 w-16">
+                <h3 class="text-xl font-bold mb-2 text-blue-800">Unified Inbox</h3>
                 <p class="text-gray-600">View all your messages from Gmail, WhatsApp, Instagram, and Facebook in one place.</p>
             </div>
-            <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                <img src="https://via.placeholder.com/100" alt="AI Suggestions" class="mx-auto mb-4">
-                <h3 class="text-xl font-bold mb-2">AI Suggestions</h3>
+            <div class="bg-blue-100 p-6 rounded-lg shadow-md text-center fade-in">
+                <img src="ai-icon.png" alt="AI Suggestions" class="mx-auto mb-4 w-16">
+                <h3 class="text-xl font-bold mb-2 text-blue-800">AI Suggestions</h3>
                 <p class="text-gray-600">Get smart reply suggestions to save time and improve communication efficiency.</p>
             </div>
-            <div class="bg-white p-6 rounded-lg shadow-md text-center">
-                <img src="https://via.placeholder.com/100" alt="User-Friendly Design" class="mx-auto mb-4">
-                <h3 class="text-xl font-bold mb-2">User-Friendly Design</h3>
+            <div class="bg-blue-100 p-6 rounded-lg shadow-md text-center fade-in">
+                <img src="design-icon.png" alt="User-Friendly Design" class="mx-auto mb-4 w-16">
+                <h3 class="text-xl font-bold mb-2 text-blue-800">User-Friendly Design</h3>
                 <p class="text-gray-600">Intuitive interface designed for seamless usability across devices.</p>
             </div>
         </div>
