--- a/message_detail.html
+++ b/message_detail.html
@@ -5,18 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Message Detail</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        /* Button Animation */
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+        }
+        .pulse {
+            animation: pulse 1.5s infinite;
+        }
+    </style>
 </head>
-<body class="bg-gray-100 font-sans">
+<body class="bg-gray-50 font-sans">
     <!-- Sticky Header -->
-    <nav class="sticky top-0 bg-white shadow-md z-10">
+    <nav class="sticky top-0 bg-blue-800 shadow-md z-10">
         <div class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center">
-                <img src="https://via.placeholder.com/40" alt="Logo" class="mr-3 rounded-full">
-                <span class="font-bold text-xl">Message Hub</span>
+                <img src="logo.png" alt="Logo" class="mr-3 w-10 h-10 rounded-full">
+                <span class="font-bold text-xl text-white">Message Hub</span>
             </div>
             <div class="flex items-center">
-                <a href="dashboard.html" class="text-blue-500 hover:text-blue-700">Back to Dashboard</a>
-                <a href="index.html" class="ml-4 text-blue-500 hover:text-blue-700">Home</a>
+                <a href="dashboard.html" class="text-white hover:text-blue-300 transition duration-300">Back to Dashboard</a>
+                <a href="index.html" class="ml-4 text-white hover:text-blue-300 transition duration-300">Home</a>
             </div>
         </div>
     </nav>
@@ -24,7 +34,7 @@
     <!-- Message Detail -->
     <div class="container mx-auto px-6 py-6">
         <div class="bg-white p-6 rounded-lg shadow-md">
-            <h2 class="text-2xl font-bold mb-6">Message from John Doe</h2>
+            <h2 class="text-2xl font-bold mb-6 text-blue-800">Message from John Doe</h2>
             <div class="border-b pb-4 mb-4">
                 <p class="text-gray-700">Hello, how are you?</p>
                 <span class="block mt-2 text-gray-500">10:30 AM</span>
@@ -32,26 +42,26 @@
             <div class="mb-4">
                 <textarea placeholder="Type a reply..." class="w-full px-4 py-2 rounded-lg border focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
             </div>
-            <button class="bg-blue-500 hover:bg-blue-700 transition duration-300 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Send</button>
+            <button class="bg-blue-500 hover:bg-blue-600 transition duration-300 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline pulse">Send</button>
             <button class="ml-2 bg-gray-300 hover:bg-gray-400 transition duration-300 text-gray-700 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Cancel</button>
         </div>
 
         <!-- AI Suggestions -->
         <div class="bg-white p-6 rounded-lg shadow-md mt-6">
-            <h2 class="text-2xl font-bold mb-6">AI Suggestions</h2>
+            <h2 class="text-2xl font-bold mb-6 text-blue-800">AI Suggestions</h2>
             <ul class="divide-y divide-gray-200">
                 <li class="py-4">
                     <p class="text-gray-700">Hi John, I'm doing well. How about you?</p>
                     <div class="mt-2">
-                        <button class="bg-green-500 hover:bg-green-700 transition duration-300 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Send</button>
-                        <button class="ml-2 bg-red-500 hover:bg-red-700 transition duration-300 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Edit</button>
+                        <button class="bg-green-500 hover:bg-green-600 transition duration-300 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Send</button>
+                        <button class="ml-2 bg-red-500 hover:bg-red-600 transition duration-300 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Edit</button>
                     </div>
                 </li>
                 <li class="py-4">
                     <p class="text-gray-700">Hey John, I'll see you later.</p>
                     <div class="mt-2">
-                        <button class="bg-green-500 hover:bg-green-700 transition duration-300 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Send</button>
-                        <button class="ml-2 bg-red-500 hover:bg-red-700 transition duration-300 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Edit</button>
+                        <button class="bg-green-500 hover:bg-green-600 transition duration-300 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Send</button>
+                        <button class="ml-2 bg-red-500 hover:bg-red-600 transition duration-300 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Edit</button>
                     </div>
                 </li>
             </ul>
