--- a/ai_suggestions.html
+++ b/ai_suggestions.html
@@ -3,57 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Suggestions</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <title>AI Suggestions - Message Hub</title>
 </head>
-<body class="bg-gray-100">
-    <nav class="bg-white shadow-md">
-        <div class="container mx-auto px-6 py-3 flex justify-between items-center">
-            <div class="flex items-center">
-                <img src="https://via.placeholder.com/40" alt="Logo" class="mr-3 rounded-full">
-                <span class="font-bold text-xl">Message Hub</span>
-            </div>
-            <div class="flex items-center">
-                <a href="signup.html" class="text-blue-500 hover:text-blue-700 mr-4">Sign Up</a>
-                <a href="login.html" class="text-blue-500 hover:text-blue-700">Login</a>
-            </div>
-        </div>
-    </nav>
+<body>
+    <header>
+        <h1>AI Suggestions</h1>
+        <nav>
+            <a href="signup.html">Sign Up</a>
+            <a href="login.html">Login</a>
+        </nav>
+    </header>
 
-    <div class="container mx-auto px-6 py-6">
-        <div class="bg-white p-6 rounded-lg shadow-md">
-            <h2 class="text-2xl font-bold mb-6">Message from John Doe</h2>
-            <div class="border-b pb-4 mb-4">
-                <p class="text-gray-700">Hello, how are you?</p>
-                <span class="block mt-2 text-gray-500">10:30 AM</span>
-            </div>
-            <div class="mb-4">
-                <textarea placeholder="Type a reply..." class="w-full px-4 py-2 rounded-lg border"></textarea>
-            </div>
-            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Send</button>
-            <button class="ml-2 bg-gray-300 hover:bg-gray-400 text-gray-700 font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">Cancel</button>
-        </div>
+    <section>
+        <h2>Message from John Doe</h2>
+        <p>Hello, how are you?</p>
+        <small>10:30 AM</small>
+        <form action="#">
+            <button type="submit">Send</button>
+            <button type="button">Cancel</button>
+        </form>
+    </section>
 
-        <div class="bg-white p-6 rounded-lg shadow-md mt-6">
-            <h2 class="text-2xl font-bold mb-6">AI Suggestions</h2>
-            <ul class="divide-y divide-gray-200">
-                <li class="py-4">
-                    <p class="text-gray-700">Hi John, I'm doing well. How about you?</p>
-                    <div class="mt-2">
-                        <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Send</button>
-                        <button class="ml-2 bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Edit</button>
-                    </div>
-                </li>
-                <li class="py-4">
-                    <p class="text-gray-700">Hey John, I'll see you later.</p>
-                    <div class="mt-2">
-                        <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Send</button>
-                        <button class="ml-2 bg-red-500 hover:bg-red-700 text-white font-bold py-1 px-3 rounded focus:outline-none focus:shadow-outline">Edit</button>
-                    </div>
-                </li>
-                <!-- Add more suggestions as needed -->
-            </ul>
+    <section>
+        <h3>AI Suggestions</h3>
+        <div>
+            <p>Hi John, I'm doing well. How about you?</p>
+            <button>Send</button>
+            <button>Edit</button>
         </div>
-    </div>
+        <div>
+            <p>Hey John, I'll see you later.</p>
+            <button>Send</button>
+            <button>Edit</button>
+        </div>
+    </section>
 </body>
 </html>
