--- a/signup.html
+++ b/signup.html
@@ -3,28 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <title>Sign Up - Message Hub</title>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-    <div class="bg-white p-8 rounded-lg shadow-md w-full max-w-md">
-        <h2 class="text-2xl font-bold mb-6 text-center">Sign Up</h2>
-        <form>
-            <div class="mb-4">
-                <label for="email" class="block text-gray-700 font-bold mb-2">Email</label>
-                <input type="email" id="email" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Email">
-            </div>
-            <div class="mb-4">
-                <label for="password" class="block text-gray-700 font-bold mb-2">Password</label>
-                <input type="password" id="password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Password">
-            </div>
-            <div class="mb-6">
-                <label for="confirm-password" class="block text-gray-700 font-bold mb-2">Confirm Password</label>
-                <input type="password" id="confirm-password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" placeholder="Confirm Password">
-            </div>
-            <button type="button" onclick="window.location.href='index.html'" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline w-full">Sign Up</button>
-        </form>
-        <p class="mt-4 text-center">Already have an account? <a href="login.html" class="text-blue-500 hover:text-blue-700">Login</a></p>
-    </div>
+<body>
+    <header>
+        <h1>Sign Up</h1>
+    </header>
+
+    <form action="#">
+        <label for="email">Email</label>
+        <input type="email" id="email" required><br>
+        <label for="password">Password</label>
+        <input type="password" id="password" required><br>
+        <label for="confirm-password">Confirm Password</label>
+        <input type="password" id="confirm-password" required><br>
+        <button type="submit">Sign Up</button>
+    </form>
+
+    <p>Already have an account? <a href="login.html">Login</a></p>
 </body>
 </html>
